# ml-end-to-end

./: .gitignore  .pre-commit-config.yaml  DESIGN_DOC.md  MODEL_CARD.md  PROJECT_PLAN.md  README.md  dvc.yaml  pyproject.toml
.dvc/: config
configs/: experiment_augmentation.yaml  experiment_baseline.yaml  train_config.yaml
data/: raw.dvc
doc/: PROJECT_04_ENERGY_FORECASTING.md  PROJECT_05_RECOMMENDATION.md  PROJECT_07_FRAUD_DETECTION.md  PROJECT_10_AI_AGENT.md  PROJECT_PLAN.md
docker/: Dockerfile.api
notebooks/: 01_eda.ipynb  03_evaluation.ipynb
projects/01_cat_dog_classifier/: docker-compose.yaml
projects/01_cat_dog_classifier/configs/: experiment_batch_size.yaml  experiment_finetune.yaml  experiment_scheduler.yaml
projects/01_cat_dog_classifier/doc/: DESIGN_DOC.md
projects/02_sentiment_analysis/: README.md
projects/03_house_price/: README.md
projects/03_house_price/doc/: PROJECT_PLAN.md
projects/04_energy_forecasting/: README.md
projects/05_recommendation/: README.md
projects/06_object_detection/: README.md
projects/07_fraud_detection/: README.md
projects/08_rag_qa/: README.md
projects/09_content_moderation/: README.md
projects/10_ai_agent/: README.md
projects/11_multi_agent/: README.md
projects/12_ml_platform/: README.md
scripts/: run_experiments.sh
src/data/: dataset.py  download.py  split.py  transforms.py  validate.py
src/model/: classifier.py  export.py
src/serving/: app.py  predict.py
src/training/: evaluate.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_predict.py  test_schemas.py
(+16 files in other folders)
