[project]
name = "ml-end-to-end"
version = "0.1.0"
description = "Production-grade cat vs dog image classifier"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "mlflow>=2.10",
    "dvc[gdrive]>=3.0",
    "pandas>=2.0",
    "Pillow>=10.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.6",
    "streamlit>=1.30",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "locust>=2.20",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
