[project]
name = "ml-end-to-end"
version = "0.1.0"
description = "12-project ML Engineer roadmap"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["projects/*/tests"]
